<resources>
    <string name="app_name">Notepad</string>
    <string name="NoteApp">Note App</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="add_note">Add note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>